Fix z-index bug in Chrome

--- a/style.scss
+++ b/style.scss
@@ -4,13 +4,13 @@
 
 .scatter-plot.canvas {
     position: absolute;
-    z-index: 1000;
+    z-index: -1;
 }
 
 .scatter-plot.svg {
     position: absolute;
     pointer-events: none;
-    z-index: -1;
+    z-index: -2;
 }
 
 .scatter-plot {
